--- a/hyperapp/ui/model_command.resources.yaml
+++ b/hyperapp/ui/model_command.resources.yaml
@@ -8,12 +8,13 @@ import:
 - legacy_type.ui:global_model_command_d
 - legacy_type.ui:model_command
 - resource.data_to_res:data_to_res.service
+- ui.model_command_creg:model_command_creg.service
 associations:
 - bases:
-  - builtins:pyobj_creg.service
+  - ui.model_command_creg:model_command_creg.service
   - legacy_type.ui:model_command
   key:
-  - builtins:pyobj_creg.service
+  - ui.model_command_creg:model_command_creg.service
   - legacy_type.ui:model_command
   value: model_command_from_piece
 definitions:
@@ -26,6 +27,7 @@ definitions:
       htypes.ui.model_command: legacy_type.ui:model_command
       services.association_reg: builtins:association_reg.service
       services.data_to_res: resource.data_to_res:data_to_res.service
+      services.model_command_creg: ui.model_command_creg:model_command_creg.service
       services.pyobj_creg: builtins:pyobj_creg.service
   model_command_from_piece:
     _type: legacy_type.builtin:attribute
