--- a/hyperapp/ui/navigator.resources.yaml
+++ b/hyperapp/ui/navigator.resources.yaml
@@ -2,7 +2,6 @@
 
 import:
 - builtins:mosaic.service
-- builtins:pyobj_creg.service
 - builtins:web.service
 - legacy_type.builtin:attribute
 - legacy_type.builtin:python_module
@@ -13,6 +12,7 @@ import:
 - legacy_type.navigator:state
 - legacy_type.ui:ui_ctl
 - ui.model_command:model_command.module
+- ui.model_command_creg:model_command_creg.service
 - ui.ui_ctl_registry:ui_ctl_creg.service
 - ui.visualizer:visualizer.service
 associations:
@@ -46,8 +46,8 @@ definitions:
       htypes.navigator.layout: legacy_type.navigator:layout
       htypes.navigator.open_new_diff: legacy_type.navigator:open_new_diff
       htypes.navigator.state: legacy_type.navigator:state
+      services.model_command_creg: ui.model_command_creg:model_command_creg.service
       services.mosaic: builtins:mosaic.service
-      services.pyobj_creg: builtins:pyobj_creg.service
       services.ui_ctl_creg: ui.ui_ctl_registry:ui_ctl_creg.service
       services.visualizer: ui.visualizer:visualizer.service
       services.web: builtins:web.service
