--- a/hyperapp/ui/navigator.resources.yaml
+++ b/hyperapp/ui/navigator.resources.yaml
@@ -2,6 +2,7 @@
 
 import:
 - builtins:mosaic.service
+- builtins:types.service
 - builtins:web.service
 - legacy_type.builtin:attribute
 - legacy_type.builtin:python_module
@@ -48,6 +49,7 @@ definitions:
       htypes.navigator.state: legacy_type.navigator:state
       services.model_command_creg: ui.model_command_creg:model_command_creg.service
       services.mosaic: builtins:mosaic.service
+      services.types: builtins:types.service
       services.ui_ctl_creg: ui.ui_ctl_registry:ui_ctl_creg.service
       services.visualizer: ui.visualizer:visualizer.service
       services.web: builtins:web.service
