--- a/hyperapp/client/client.resources.yaml
+++ b/hyperapp/client/client.resources.yaml
@@ -3,8 +3,6 @@
 import:
 - builtins:mosaic.service
 - common.context:context.module
-- legacy_type.application:layout
-- legacy_type.application:state
 - legacy_type.builtin:attribute
 - legacy_type.builtin:call
 - legacy_type.builtin:python_module
@@ -13,6 +11,8 @@ import:
 - legacy_type.menu_bar:state
 - legacy_type.navigator:layout
 - legacy_type.navigator:state
+- legacy_type.root:state
+- legacy_type.root:view
 - legacy_type.tabs:layout
 - legacy_type.tabs:state
 - legacy_type.tabs:tab
@@ -23,6 +23,7 @@ import:
 - legacy_type.window:pos
 - legacy_type.window:size
 - legacy_type.window:state
+- ui.controller:controller.module
 - ui.model_command:model_command.module
 - ui.ui_ctl_registry:ui_ctl_creg.service
 - ui.visualizer:visualizer.service
@@ -42,14 +43,15 @@ definitions:
     file_name: client.dyn.py
     import_list:
       code.context: common.context:context.module
+      code.controller: ui.controller:controller.module
       code.model_command: ui.model_command:model_command.module
-      htypes.application.layout: legacy_type.application:layout
-      htypes.application.state: legacy_type.application:state
       htypes.command_pane.command_pane: legacy_type.command_pane:command_pane
       htypes.menu_bar.layout: legacy_type.menu_bar:layout
       htypes.menu_bar.state: legacy_type.menu_bar:state
       htypes.navigator.layout: legacy_type.navigator:layout
       htypes.navigator.state: legacy_type.navigator:state
+      htypes.root.state: legacy_type.root:state
+      htypes.root.view: legacy_type.root:view
       htypes.tabs.layout: legacy_type.tabs:layout
       htypes.tabs.state: legacy_type.tabs:state
       htypes.tabs.tab: legacy_type.tabs:tab
