--- a/hyperapp/ui/str_adapter.tests.resources.yaml
+++ b/hyperapp/ui/str_adapter.tests.resources.yaml
@@ -1,6 +1,7 @@
 # Automatically generated file. Do not edit.
 
 import:
+- common.context:context.module
 - legacy_type.builtin:python_module
 - legacy_type.phony:phony
 associations: []
@@ -12,4 +13,5 @@ definitions:
     module_name: str_adapter.tests
     file_name: str_adapter.tests.dyn.py
     import_list:
+      code.context: common.context:context.module
       tested.code.str_adapter: phony
