--- a/hyperapp/ui/controller.resources.yaml
+++ b/hyperapp/ui/controller.resources.yaml
@@ -4,6 +4,7 @@ import:
 - builtins:web.service
 - legacy_type.builtin:python_module
 - ui.command_hub:command_hub.module
+- ui.ui_command:ui_command_factory.service
 - ui.ui_ctl_registry:ui_ctl_creg.service
 associations: []
 definitions:
@@ -13,5 +14,6 @@ definitions:
     file_name: controller.dyn.py
     import_list:
       code.command_hub: ui.command_hub:command_hub.module
+      services.ui_command_factory: ui.ui_command:ui_command_factory.service
       services.ui_ctl_creg: ui.ui_ctl_registry:ui_ctl_creg.service
       services.web: builtins:web.service
