--- a/hyperapp/ui/navigator.resources.yaml
+++ b/hyperapp/ui/navigator.resources.yaml
@@ -9,6 +9,7 @@ import:
 - legacy_type.navigator:go_back_diff
 - legacy_type.navigator:go_forward_diff
 - legacy_type.navigator:layout
+- legacy_type.navigator:open_new_diff
 - legacy_type.navigator:state
 - legacy_type.ui:ui_ctl
 - ui.model_command:model_command.module
@@ -43,6 +44,8 @@ definitions:
       code.model_command: ui.model_command:model_command.module
       htypes.navigator.go_back_diff: legacy_type.navigator:go_back_diff
       htypes.navigator.go_forward_diff: legacy_type.navigator:go_forward_diff
+      htypes.navigator.layout: legacy_type.navigator:layout
+      htypes.navigator.open_new_diff: legacy_type.navigator:open_new_diff
       htypes.navigator.state: legacy_type.navigator:state
       services.model_command_creg: ui.model_command_creg:model_command_creg.service
       services.mosaic: builtins:mosaic.service
