--- a/hyperapp/ui/navigator.resources.yaml
+++ b/hyperapp/ui/navigator.resources.yaml
@@ -4,13 +4,16 @@ import:
 - builtins:mosaic.service
 - builtins:types.service
 - builtins:web.service
+- common.mark:mark.service
 - legacy_type.builtin:attribute
+- legacy_type.builtin:call
 - legacy_type.builtin:python_module
 - legacy_type.navigator:go_back_diff
 - legacy_type.navigator:go_forward_diff
 - legacy_type.navigator:layout
 - legacy_type.navigator:open_new_diff
 - legacy_type.navigator:state
+- legacy_type.ui:ui_command_d
 - legacy_type.ui:ui_ctl
 - ui.model_command:model_command.module
 - ui.model_command_creg:model_command_creg.service
@@ -23,6 +26,20 @@ associations:
   - ui.ui_ctl_registry:ui_ctl_creg.service
   - legacy_type.navigator:layout
   value: NavigatorCtl.from_piece.ctl
+- bases:
+  - ui_command_d
+  - legacy_type.navigator:layout
+  key:
+  - ui_command_d
+  - legacy_type.navigator:layout
+  value: go_back
+- bases:
+  - ui_command_d
+  - legacy_type.navigator:layout
+  key:
+  - ui_command_d
+  - legacy_type.navigator:layout
+  value: go_forward
 definitions:
   NavigatorCtl:
     _type: legacy_type.builtin:attribute
@@ -36,6 +53,14 @@ definitions:
     _type: legacy_type.ui:ui_ctl
     ctr_fn: NavigatorCtl.from_piece
     command_methods: []
+  go_back:
+    _type: legacy_type.builtin:attribute
+    object: navigator.module
+    attr_name: go_back
+  go_forward:
+    _type: legacy_type.builtin:attribute
+    object: navigator.module
+    attr_name: go_forward
   navigator.module:
     _type: legacy_type.builtin:python_module
     module_name: navigator
@@ -47,9 +72,13 @@ definitions:
       htypes.navigator.layout: legacy_type.navigator:layout
       htypes.navigator.open_new_diff: legacy_type.navigator:open_new_diff
       htypes.navigator.state: legacy_type.navigator:state
+      services.mark: common.mark:mark.service
       services.model_command_creg: ui.model_command_creg:model_command_creg.service
       services.mosaic: builtins:mosaic.service
       services.types: builtins:types.service
       services.ui_ctl_creg: ui.ui_ctl_registry:ui_ctl_creg.service
       services.visualizer: ui.visualizer:visualizer.service
       services.web: builtins:web.service
+  ui_command_d:
+    _type: legacy_type.builtin:call
+    function: legacy_type.ui:ui_command_d
