--- a/hyperapp/ui/sample_tree.resources.yaml
+++ b/hyperapp/ui/sample_tree.resources.yaml
@@ -3,7 +3,6 @@
 import:
 - legacy_type.builtin:attribute
 - legacy_type.builtin:call
-- legacy_type.builtin:int
 - legacy_type.builtin:python_module
 - legacy_type.sample_tree:feed_sample_tree
 - legacy_type.sample_tree:item
@@ -50,7 +49,7 @@ definitions:
     impl: feed_sample_tree.impl
   feed_sample_tree.ui_t:
     _type: legacy_type.ui:tree_ui_t
-    key_t: legacy_type.builtin:int
+    key_t: legacy_type.sample_tree:item
     element_t: legacy_type.sample_tree:item
   global_model_command_d:
     _type: legacy_type.builtin:call
@@ -96,5 +95,5 @@ definitions:
       htypes.sample_tree.sample_tree: legacy_type.sample_tree:sample_tree
   sample_tree.ui_t:
     _type: legacy_type.ui:tree_ui_t
-    key_t: legacy_type.builtin:int
+    key_t: legacy_type.sample_tree:item
     element_t: legacy_type.sample_tree:item
