--- a/hyperapp/ui/controller.resources.yaml
+++ b/hyperapp/ui/controller.resources.yaml
@@ -2,11 +2,32 @@
 
 import:
 - builtins:web.service
+- legacy_type.builtin:attribute
+- legacy_type.builtin:call
+- legacy_type.builtin:none
 - legacy_type.builtin:python_module
+- legacy_type.layout:item
+- legacy_type.layout:view
+- legacy_type.ui:fn_impl
+- legacy_type.ui:global_model_command_d
+- legacy_type.ui:model
+- legacy_type.ui:model_command
+- legacy_type.ui:model_d
+- legacy_type.ui:tree_ui_t
 - ui.command_hub:command_hub.module
 - ui.ui_command:ui_command_factory.service
 - ui.ui_ctl_registry:ui_ctl_creg.service
-associations: []
+associations:
+- bases:
+  - global_model_command_d
+  key: global_model_command_d
+  value: open_layout_tree.command
+- bases:
+  - legacy_type.layout:view
+  key:
+  - model_d
+  - legacy_type.layout:view
+  value: layout_tree.model
 definitions:
   controller.module:
     _type: legacy_type.builtin:python_module
@@ -14,6 +35,38 @@ definitions:
     file_name: controller.dyn.py
     import_list:
       code.command_hub: ui.command_hub:command_hub.module
+      htypes.layout.item: legacy_type.layout:item
+      htypes.layout.view: legacy_type.layout:view
       services.ui_command_factory: ui.ui_command:ui_command_factory.service
       services.ui_ctl_creg: ui.ui_ctl_registry:ui_ctl_creg.service
       services.web: builtins:web.service
+  global_model_command_d:
+    _type: legacy_type.builtin:call
+    function: legacy_type.ui:global_model_command_d
+  layout_tree:
+    _type: legacy_type.builtin:attribute
+    object: controller.module
+    attr_name: layout_tree
+  layout_tree.impl:
+    _type: legacy_type.ui:fn_impl
+    function: layout_tree
+    want_feed: false
+  layout_tree.model:
+    _type: legacy_type.ui:model
+    ui_t: layout_tree.ui_t
+    impl: layout_tree.impl
+  layout_tree.ui_t:
+    _type: legacy_type.ui:tree_ui_t
+    key_t: legacy_type.builtin:none
+    element_t: legacy_type.layout:item
+  model_d:
+    _type: legacy_type.builtin:call
+    function: legacy_type.ui:model_d
+  open_layout_tree:
+    _type: legacy_type.builtin:attribute
+    object: controller.module
+    attr_name: open_layout_tree
+  open_layout_tree.command:
+    _type: legacy_type.ui:model_command
+    function: open_layout_tree
+    params: []
