--- a/hyperapp/ui/qt/controller.tests.resources.yaml
+++ b/hyperapp/ui/qt/controller.tests.resources.yaml
@@ -1,6 +1,8 @@
 # Automatically generated file. Do not edit.
 
 import:
+- builtins:mosaic.service
+- common.context:context.module
 - legacy_type.builtin:python_module
 - legacy_type.phony:phony
 associations: []
@@ -10,6 +12,8 @@ definitions:
     module_name: controller.tests
     file_name: controller.tests.dyn.py
     import_list:
+      code.context: common.context:context.module
+      services.mosaic: builtins:mosaic.service
       tested.code.controller: phony
   phony:
     _type: legacy_type.phony:phony
